# Project-A.L.I.S.

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
data/: lab_results.json
frontend/: .gitignore
frontend/src/: App.jsx
src/: ai.rs  api.rs  database.rs  engine.rs  main.rs  report.rs  six_sigma.rs
