[package]
name = "project_alis"
version = "0.1.0"
edition = "2021"
authors = ["John Mapatac"]
description = "A Six Sigma-driven Technical Route Optimizer"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
# New for Version 2:
csv = "1.3"
printpdf = "0.7" # High-performance PDF generation
reqwest = { version = "0.11", features = ["json"] } # For AI API integration
tokio = { version = "1", features = ["full"] } # Required for async AI calls
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15" # To securely store your Render database password